--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
         <!-- Overlay content -->
         <div class="overlay-content">
           <a href="/">Home</a>
-          <span onclick="openNav1()">Activities</span>
-          <a href="#events" onclick="closeNav()">Events</a>
-          <span onclick="openNav2()">Lore</span>
+          <span onclick="openNav1()">Activities ></span>
+          <a href="#events" onclick="closeNav()">Events ></a>
+          <span onclick="openNav2()">Lore ></span>
           <a href="#gallery" onclick="closeNav()">Gallery</a>
-          <span onclick="openNav3()">About</span>
+          <span onclick="openNav3()">About ></span>
           <a href="https://www.foreninglet.dk/teamenrollment/index/092039734f60d5d/8415"><img class="mobile-membership"
               src="icons/membership.png" alt="Become member button"></a>
         </div>
