--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="overlay-content">
           <a href="/">Home</a>
           <span onclick="openNav1()">Activities ></span>
-          <a href="#events" onclick="closeNav()">Events ></a>
+          <a href="#events" onclick="closeNav()">Events</a>
           <span onclick="openNav2()">Lore ></span>
           <a href="#gallery" onclick="closeNav()">Gallery</a>
           <span onclick="openNav3()">About ></span>
