--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </div>
     </section>
 
-    <section class="activity-section">
+    <section class="activity-section reverse">
 
       <div class="half-activity-section">
         <img class="icon" src="icons/helmet.png">
@@ -178,7 +178,7 @@
       </div>
     </section>
 
-    <section class="activity-section">
+    <section class="activity-section reverse">
 
       <div class="half-activity-section">
         <img class="icon" src="icons/workshop.png">
