back button in mobile navbar

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
 
       <!-- The overlay -->
       <div id="myNav1" class="overlay">
+        <!-- Arrow to close the overlay navigation -->
+        <a href="javascript:void(0)" class="close-arrow" onclick="closeNavArrow1()">< Back</a>
         <!-- Button to close the overlay navigation -->
         <a href="javascript:void(0)" class="closebtn" onclick="closeNavX1()">&times;</a>
         <!-- Overlay content -->
@@ -100,6 +102,8 @@
 
       <!-- The overlay -->
       <div id="myNav2" class="overlay">
+                <!-- Arrow to close the overlay navigation -->
+                <a href="javascript:void(0)" class="close-arrow" onclick="closeNavArrow1()">< Back</a>
         <!-- Button to close the overlay navigation -->
         <a href="javascript:void(0)" class="closebtn" onclick="closeNavX2()">&times;</a>
         <!-- Overlay content -->
@@ -113,6 +117,8 @@
 
       <!-- The overlay -->
       <div id="myNav3" class="overlay">
+                <!-- Arrow to close the overlay navigation -->
+                <a href="javascript:void(0)" class="close-arrow" onclick="closeNavArrow1()">< Back</a>
         <!-- Button to close the overlay navigation -->
         <a href="javascript:void(0)" class="closebtn" onclick="closeNavX3()">&times;</a>
         <!-- Overlay content -->
