--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
   <section id="gallery" class="page">
     <!-- top of the page with background -->
     <div class="activity-top">
-      <img alt="swords" src="icons/swords.png">
+      <img alt="gallery" src="icons/gallery.png">
       <h2>Gallery</h2>
     </div>
 
