--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
   <section id="info" class="page">
     <!-- top of the page with background -->
     <div class="activity-top">
-      <img alt="swords" src="icons/swords.png">
+      <img alt="Info icon" src="icons/info.png">
       <h2>Practical information</h2>
     </div>
     <!-- separating styled line -->
@@ -923,7 +923,7 @@
 
     <!-- top of the page with background -->
     <div class="activity-top">
-      <img alt="swords" src="icons/swords.png">
+      <img alt="info" src="icons/swords.png">
       <h2>Contact</h2>
     </div>
 
