--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
     </div>
 
     <!-- Map API -->
-    <div id="map"></div>
+    <div id="map" class="map"></div>
     <script>
       function initMap() {
         // Map options
@@ -1044,6 +1044,7 @@
       </div>
       <div class="footer-element">
         <h4>Where We Are</h4>
+        <!-- Map API -->
         <div id="map" class="footer-map"></div>
       </div>
     </div>
