--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Fafner Roleplay</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="#" />
-  <meta name="author" content="#" />
+  <meta name="author" content="co-authored by Karolina Krysiak and Fabian Rzadkowski" />
   <link rel="stylesheet" href="css/main.css" />
   <link rel="shortcut icon" type="image/png" href="icons/logo-small.png" />
   <link href="calendar/calendar.css" rel="stylesheet">
