--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8" />
   <title>Fafner Roleplay</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="#" />
+  <meta name="description" content="The role-playing game association Fafner" />
+  <meta name="keywords" content="roleplay, rollespil, swords, sværd, fight-club, martial arts, medival, fantasy roleplay, larp, live action roleplay, live action games, roleplay games, fafner, fafner roleplay"/>
   <meta name="author" content="co-authored by Karolina Krysiak and Fabian Rzadkowski" />
   <link rel="stylesheet" href="css/main.css" />
   <link rel="shortcut icon" type="image/png" href="icons/logo-small.png" />
