--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Fafner Roleplay</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="The role-playing game association Fafner" />
-  <meta name="keywords" content="roleplay, rollespil, swords, sværd, fight-club, martial arts, medival, fantasy roleplay, larp, live action roleplay, live action games, roleplay games, fafner, fafner roleplay"/>
+  <meta name="keywords"
+    content="roleplay, rollespil, swords, sværd, fight-club, martial arts, medival, fantasy roleplay, larp, live action roleplay, live action games, roleplay games, fafner, fafner roleplay" />
   <meta name="author" content="co-authored by Karolina Krysiak and Fabian Rzadkowski" />
   <link rel="stylesheet" href="css/main.css" />
   <link rel="shortcut icon" type="image/png" href="icons/logo-small.png" />
@@ -87,49 +88,49 @@
       <!-- The overlay -->
       <div id="myNav1" class="overlay">
         <!-- Arrow to close the overlay navigation -->
-        <a href="javascript:void(0)" class="close-arrow" onclick="closeNavArrow1()">< Back</a>
-        <!-- Button to close the overlay navigation -->
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNavX1()">&times;</a>
-        <!-- Overlay content -->
-        <div class="overlay-content">
-          <a href="#fight-club" onclick="closeNav1()">Fight Club</a>
-          <a href="#larp" onclick="closeNav1()">LARP</a>
-          <a href="#games" onclick="closeNav1()">Tabletop Games</a>
-          <a href="#workshops" onclick="closeNav1()">Workshops</a>
-          <a href="https://www.foreninglet.dk/teamenrollment/index/092039734f60d5d/8415"><img class="mobile-membership"
-              src="icons/membership.png" alt="Become member button"></a>
-        </div>
+        <a href="javascript:void(0)" class="close-arrow" onclick="closeNavArrow1()">
+          < Back</a> <!-- Button to close the overlay navigation -->
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNavX1()">&times;</a>
+            <!-- Overlay content -->
+            <div class="overlay-content">
+              <a href="#fight-club" onclick="closeNav1()">Fight Club</a>
+              <a href="#larp" onclick="closeNav1()">LARP</a>
+              <a href="#games" onclick="closeNav1()">Tabletop Games</a>
+              <a href="#workshops" onclick="closeNav1()">Workshops</a>
+              <a href="https://www.foreninglet.dk/teamenrollment/index/092039734f60d5d/8415"><img
+                  class="mobile-membership" src="icons/membership.png" alt="Become member button"></a>
+            </div>
       </div>
 
       <!-- The overlay -->
       <div id="myNav2" class="overlay">
-                <!-- Arrow to close the overlay navigation -->
-                <a href="javascript:void(0)" class="close-arrow" onclick="closeNavArrow1()">< Back</a>
-        <!-- Button to close the overlay navigation -->
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNavX2()">&times;</a>
-        <!-- Overlay content -->
-        <div class="overlay-content">
-          <a href="#niebelungen" onclick="closeNav2()">Niebelungen</a>
-          <a href="#other" onclick="closeNav2()">Other</a>
-          <a href="https://www.foreninglet.dk/teamenrollment/index/092039734f60d5d/8415"><img class="mobile-membership"
-              src="icons/membership.png" alt="Become member button"></a>
-        </div>
+        <!-- Arrow to close the overlay navigation -->
+        <a href="javascript:void(0)" class="close-arrow" onclick="closeNavArrow1()">
+          < Back</a> <!-- Button to close the overlay navigation -->
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNavX2()">&times;</a>
+            <!-- Overlay content -->
+            <div class="overlay-content">
+              <a href="#niebelungen" onclick="closeNav2()">Niebelungen</a>
+              <a href="#other" onclick="closeNav2()">Other</a>
+              <a href="https://www.foreninglet.dk/teamenrollment/index/092039734f60d5d/8415"><img
+                  class="mobile-membership" src="icons/membership.png" alt="Become member button"></a>
+            </div>
       </div>
 
       <!-- The overlay -->
       <div id="myNav3" class="overlay">
-                <!-- Arrow to close the overlay navigation -->
-                <a href="javascript:void(0)" class="close-arrow" onclick="closeNavArrow1()">< Back</a>
-        <!-- Button to close the overlay navigation -->
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNavX3()">&times;</a>
-        <!-- Overlay content -->
-        <div class="overlay-content">
-          <a href="#info" onclick="closeNav3()">Practical Information</a>
-          <a href="#contact" onclick="closeNav3()">Contact</a>
-          <a href="#team" onclick="closeNav3()">The Team</a>
-          <a href="https://www.foreninglet.dk/teamenrollment/index/092039734f60d5d/8415"><img class="mobile-membership"
-              src="icons/membership.png" alt="Become member button"></a>
-        </div>
+        <!-- Arrow to close the overlay navigation -->
+        <a href="javascript:void(0)" class="close-arrow" onclick="closeNavArrow1()">
+          < Back</a> <!-- Button to close the overlay navigation -->
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNavX3()">&times;</a>
+            <!-- Overlay content -->
+            <div class="overlay-content">
+              <a href="#info" onclick="closeNav3()">Practical Information</a>
+              <a href="#contact" onclick="closeNav3()">Contact</a>
+              <a href="#team" onclick="closeNav3()">The Team</a>
+              <a href="https://www.foreninglet.dk/teamenrollment/index/092039734f60d5d/8415"><img
+                  class="mobile-membership" src="icons/membership.png" alt="Become member button"></a>
+            </div>
       </div>
 
     </div>
